<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="navController"
            type="androidx.navigation.NavController" />
        <variable
            name="viewModel"
            type="br.edu.infnet.android.teste3.ui.addTransicao.AdicionarTransicaoViewModel" />
    </data>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/azul3"
        tools:context=".ui.addTransicao.AdicionarTransicaoFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/addCardCloseBtn"
                android:background="?attr/actionBarItemBackground"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{() -> navController.popBackStack()}"
                android:src="@drawable/ic_close"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:id="@+id/add_linerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@color/azul3"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/addCardDescription"
                    style="?attr/textAppearanceHeadline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    cardFormFragmentLabel="@{viewModel.showEditLabel}"
                    tools:text= "Adicionar Uma Transicao"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addCardCloseBtn" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_nome_view"
                    style="@style/PrimaryEditText"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:hint="@string/txt_nome">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_nome"
                        android:text="@={viewModel.nomeField}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_valor_view"
                    style="@style/PrimaryEditText"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:hint="@string/txt_acao_valor"
                    app:prefixText="R$"
                    app:prefixTextColor="@color/white"
                    android:textColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_valor"
                        android:text="@={viewModel.valorField}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:textColor="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_tipoDeTransicao_view"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:hint="@string/txt_acao_tipoDeTransicao"
                    app:boxBackgroundColor="@color/azul5">

                    <AutoCompleteTextView
                        android:id="@+id/et_tipoDeTransicao"
                        android:text="@={viewModel.tipoField}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_categoria_view"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:hint="@string/txt_acao_categpria"
                    app:boxBackgroundColor="@color/azul5">

                    <AutoCompleteTextView
                        android:id="@+id/et_categoria"
                        android:text="@={viewModel.categoriaField}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_quando_view"
                    style="@style/PrimaryEditText"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:hint="@string/txt_acao_quando">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_quando"
                        android:text="@={viewModel.quandoField}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_obs_view"
                    style="@style/PrimaryEditText"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:hint="@string/txt_acao_obs"/>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_salvar_transicao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:text="@string/txt_salvar"
                android:onClick="@{()->viewModel.createNewCard()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_linerLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>